# opengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp
